upload download job log ability
